--- a/layouts/shortcodes/slide.html
+++ b/layouts/shortcodes/slide.html
@@ -1,16 +1,9 @@
-<!--
-<div class="relative isolate overflow-hidden w-[30rem] mr-8 min-h-[32rem] p-6 lg:p-8 lg:p-12 rounded-2xl">
-  <div class="relative flex flex-col w-full h-full z-20">
-    <div class="text-sm leading-relaxed mt-auto text-white">{{ .Get "text" }}</div>
+<div class="w-full lg:w-2/5 flex-none snap-center px-4 sm:px-6">
+  <div class="relative transform overflow-hidden w-full min-h-[30rem] sm:min-h-[40rem] rounded-2xl">
+    <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
+    <div class="absolute size-full inset-0 bg-black/20 z-10"></div>
+    <div class="absolute inset-x-0 bottom-0 bg-black/50 p-6 sm:p-8 z-20">
+      <p class="text-sm leading-relaxed text-gray-200">{{ .Get "text" }}</p>
+    </div>
   </div>
-  <div class="absolute size-full inset-0 z-10 bg-black/30 bg-gradient-to-b from-black/50"></div>
-  <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
 </div>
--->
-<li class="relative isolate overflow-hidden w-[20rem] lg:w-2/5 min-h-[24rem] lg:min-h-[30rem] flex-shrink-0 snap-center p-6 lg:p-8 lg:p-12 rounded-2xl {{ if (.Get "first") }}ml-6{{ end }}{{ if (.Get "last") }}mr-6{{ end }}">
-  <div class="relative flex flex-col w-full h-full z-20">
-    <div class="text-sm leading-relaxed mt-auto text-white">{{ .Get "text" }}</div>
-  </div>
-  <div class="absolute size-full inset-0 z-10 bg-black/10 bg-gradient-to-t from-black/60"></div>
-  <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
-</li>
