--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,13 +3,15 @@
 {{ define "main" }}
 
 <!-- Hero -->
+
 <div class="relative isolate overflow-hidden px-6 pt-14 lg:px-8 bg-slate-800">
-  {{ with .Params.backgroundImage }}<img src="{{ . }}" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">{{ end }}
+  {{ with .Params.backgroundImage }}
+    <img src="{{ . }}" class="absolute w-full h-full inset-0 object-cover -z-10">
+  {{ end }}
+  <div class="absolute size-full inset-0 bg-black/10 bg-gradient-to-b from-black/70 -z-10"></div>
   <div class="max-w-3xl py-32 sm:py-48 lg:py-56">
     <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">{{ .Params.heading }}</h1>
   </div>
-
-  <div class="absolute w-full h-full inset-0 -z-10 bg-black/20 bg-gradient-to-b from-black/90" aria-hidden="true"></div>
 </div>
 
 {{ .Content }}
