--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
 
 <!-- Chi siamo -->
 <div class="relative isolate overflow-hidden mb-4 px-6 lg:px-8 bg-slate-800">
-  <img src="/images/industria.jpeg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
+  <img src="https://insideclimatenews.org/wp-content/uploads/2021/10/steel_sean-gallup-getty-scaled.jpg" alt="" class="absolute w-full h-full inset-0 -z-10 object-cover">
   <div class="mx-auto max-w-7xl py-28 sm:py-40 lg:py-48">
     <h2 class="text-3xl sm:text-4xl lg:text-5xl font-bold tracking-tight text-gray-200">Al servizio dell'industria</h2>
     <div class="mt-8 lg:mt-16">
