--- a/layouts/shortcodes/card.html
+++ b/layouts/shortcodes/card.html
@@ -1,8 +1,6 @@
-<div class="relative overflow-hidden bg-slate-800 min-h-[24rem] lg:min-h-[30rem] p-6 lg:p-8 lg:p-12 rounded-2xl">
-  <div class="relative flex flex-col w-full h-full z-20">
-    <h3 class="text-lg sm:text-xl lg:text-2xl font-semibold tracking-tight text-gray-200">{{ .Get "title" }}</h3>
-    <div class="mt-auto text-sm/6 text-gray-200">{{ .Get "text" }}</div>
-  </div>
-  <div class="absolute size-full inset-0 z-10 bg-black/10 bg-gradient-to-t from-black/50"></div>
-  <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover">
+<div class="relative overflow-hidden flex flex-col justify-end min-h-[24rem] lg:min-h-[30rem] p-6 lg:p-8 rounded-2xl">
+  <img src="{{ .Get "image" }}" class="absolute w-full h-full inset-0 object-cover -z-10">
+  <div class="absolute size-full inset-0 bg-black/10 bg-gradient-to-t from-black/70 -z-10"></div>
+  <h3 class="text-lg sm:text-xl lg:text-2xl font-semibold tracking-tight text-gray-200">{{ .Get "title" }}</h3>
+  <div class="mt-4 text-sm/6 text-gray-200">{{ .Get "text" }}</div>
 </div>
