--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,9 +2,9 @@
 <html lang="it">
   <head>
     <meta charset="utf-8">
-    <title>{{ block "title" . }}Centro Cilindri - Il partner ideale per l’intero ciclo di vita dei tuoi cilindri{{ end }}</title>
+    <title>{{ block "title" . }}Centro Cilindri Srl - Riparazione | Costruzione | Guarnizioni{{ end }}</title>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="{{ .Description }}">
+    <meta name="description" content="Revisione, riparazione e costruzione di cilindri idraulici e pneumatici e vendita guarnizioni per cilindri e presse, garantendo qualità, efficienza e supporto tecnico specializzato.">
     {{/* styles */}}
     {{ $options := dict "inlineImports" true }}
     {{ $styles := resources.Get "css/styles.css" }}
